# fiap-data-viz-and-production-models-tc

./: .gitignore  404.html  Makefile  README.md  app.py  environment.yaml  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml
data/processed/: base_limpa.csv
docs/: getting-started.md  index.md  mkdocs.yml  modelagem.md
getting-started/: index.html
modelagem/: index.html
modelo_ml_para_prever_obesidade/: __init__.py  dataset.py  features.py  plots.py
modelo_ml_para_prever_obesidade/modeling/: predict.py  train.py
modelo_ml_para_prever_obesidade/visualization/: app.py
notebooks/: tech_challenge_codigo.ipynb
search/: search_index.json
