[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "modelo_ml_para_prever_obesidade"
version = "0.0.1"
description = "Modelo para prever a obesidade"
authors = [
  { name = "grupo 63 FIAP Fase 4" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["modelo_ml_para_prever_obesidade"]
force_sort_within_sections = true


